--- a/index.html
+++ b/index.html
@@ -46,7 +46,65 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row ">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-items">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Fatema Mahabub
+                        </p>
+
+                    </div>
+                </div>
+                <div class="personal-info-items">
+                    <div class="key">
+                        <p class="uppercase">
+                            Address:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            Friedrich Str 24b, 79618- Rheinfelden, Germany
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-items">
+                    <div class="key">
+                        <p class="uppercase">
+                            Phone Number:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            01795281615
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-items">
+                    <div class="key">
+                        <p class="uppercase">
+                            E-mail:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p>
+                            fmahabub8@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
