add and style the wrok history

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Fatema</title>
 </head>
 <body>
     <header>
@@ -47,13 +47,25 @@
     </header>
     <section class="container-fluid">
         <div class="row ">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work history
                         </h3>
                     </div>
+                </div>
+                <div class="timeline-item" data-dates="01/2010 - 05/2010">
+                    <h4>System Engineering Ltd., Bangladesh</h4>
+                    <p>Engineer</p>
+                </div>
+                <div class="timeline-item" data-dates="06/2010 - 12/2010">
+                    <h4>The North Polytechnic Institute, Bangladesh</h4>
+                    <p>Instructor, Department of Electrical Technology</p>
+                </div>
+                <div class="timeline-item" data-dates="01/2011 - 06/2012">
+                    <h4>University of Information, Technology and Science (UITS), Bangladesh</h4>
+                    <p>Lecturer, Department of Electrical and Electronics</p>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
