Modified the cv

--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer 
-                                    with a wealth of diverse life and technical experience that I bring to every project.
+                                    I am a fast-learning Full Stack Developer with a rich background of diverse life and technical experiences that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -141,9 +140,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do?</h4>
                                 <p>
-                                    I follow form as well as function. 
-                                    I know that the aesthetics of effective design combined with application speed, 
-                                    security and reliability combine to create a great user experience.
+                                    I prioritize both form and function, understanding that the aesthetics of effective design, combined with speed, security, and reliability, are key to creating an exceptional user experience.
                                 </p>
                             </div>
                         </div>
@@ -157,9 +154,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. 
-                                    I'm an excellent communicator who thrives in bright and enthusiastic teams 
-                                    and I'm also a self starter when working solo.
+                                    I work quickly and effectively across the stack to get things built. While I thrive in enthusiastic teams, I’m also a self-starter when working solo, always focused on delivering quality results.
                                 </p>
                             </div>
                         </div>
@@ -190,31 +185,31 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item">
+                    <!-- <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
-                    </li>
-                    <li class="list-inline-item">
+                    </li> -->
+                    <!-- <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/fatema-mahabub-346487177/">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
+                            <i class="fa fa-xing" aria-hidden="true"></i>
+                            <span class="sr-only">Xing</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                    <!-- <li class="list-inline-item">
                         <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
@@ -225,7 +220,7 @@
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
