--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
                                 <h4 class="three-reasons-heading uppercase">Font End</h4>
                                 <p>
                                     I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. 
-                                    I also have extensive experience in Front End Frameworks such as Angular and React
+                                    I also have extensive experience in Front End Frameworks such as React
                                 </p>
                             </div>
                         </div>
@@ -127,20 +127,20 @@
                             <span class="progress-type"> CSS/ CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-                                <span class="sr-only">70% complet </span>
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:50%;">
+                                <span class="sr-only">50% complet </span>
                             </div>
                             <span class="progress-type"> JavaScript/ jQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:50%;">
+                                <span class="sr-only">50% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:40%;">
+                                <span class="sr-only">40% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
