--- a/js/404.html
+++ b/js/404.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rosie Odenkirk</title>
+    <title>Fatema Mahabub</title>
 </head>
 <body>
     <h1>Hmm.. Looks like you've gone off the beaten path. </h1>
-    <h3>Don't worry. Rosie is looking into it. Click on the image to head back to Kansas.</h3>
+    <h3>Don't worry. Fatema is looking into it. Click on the image to head back to Kansas.</h3>
     <a href="index.html">
-        <img src="assets/images/rosie-404.png" alt="rosie-404">
+        <img src="assets/images/Fatema-404.png" alt="Fatema-404">
     </a>
 </body>
 </html>
