--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
                             <li class="col-6 col-sm-2 ui-menu-color-resume list-inline-item menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem">
+                            <!-- <li class="col-6 col-sm-2 ui-menu-color-contact list-inline-item menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
-                            </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
+                            </li> -->
+                            <!-- <li class="col-xs-6 col-sm-2 ui-menu-color-interests list-inline-item menuitem">
                                 <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
-                            </li>
+                            </li> -->
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github list-inline-item menuitem">
                                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
